<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    android:weightSum="10">

    <RelativeLayout android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9">

        <TextView
            android:text="@string/municipios"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/Black"
            android:padding="@dimen/activity_horizontal_margin"/>

        <Spinner
            android:id="@+id/MunicipioSpinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin"
            android:layout_marginTop="55dp"
            android:background="@color/Black"></Spinner>

        <TextView
            android:text="@string/maxlongitud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/Black"
            android:padding="@dimen/activity_horizontal_margin"
            android:layout_marginTop="105dp"/>

        <Spinner
            android:id="@+id/LongitudSpinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin"
            android:layout_marginTop="155dp"
            android:background="@color/Black"></Spinner>


        <TextView
            android:text="@string/dificultad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/Black"
            android:padding="@dimen/activity_horizontal_margin"
            android:layout_marginTop="205dp"/>

        <Spinner
            android:id="@+id/DificultadSpinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin"
            android:layout_marginTop="245dp"
            android:background="@color/Black"></Spinner>

        <TextView
            android:text="@string/valoracionminima"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/Black"
            android:padding="@dimen/activity_horizontal_margin"
            android:layout_marginTop="305dp"/>

        <Spinner
            android:id="@+id/ValoracionSpinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin"
            android:layout_marginTop="345dp"
            android:background="@color/Black"></Spinner>

</RelativeLayout>

    <Button
        android:id="@+id/searchPeople"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="25sp"
        android:text="@string/buscar"
        android:textStyle="bold"
        android:textColor="@color/White"
        android:background="@drawable/pulsacionbotonbuscar"
        android:drawableRight="@drawable/buscarlupa"/>

</LinearLayout>
