<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_centerInParent="true"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/White">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/nombre"
            android:text="@string/nombre"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:textSize="20sp"/>

        <ImageView
            android:id="@+id/imagenRuta"
            android:layout_width="fill_parent"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"/>

        <ImageView
            android:id="@+id/valoracion"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawable="@drawable/estrella05"/>

        <Button
            android:id="@+id/botonvaloracion"
            android:text="Valorar ruta"
            android:textColor="@color/Black"
            android:background="@color/White"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/longitud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:paddingLeft="30dp"
            android:paddingRight="10dp"
            android:textSize="17sp"/>


        <TextView
        android:id="@+id/duracion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:paddingLeft="30dp"
        android:paddingRight="10dp"
        android:textSize="17sp"/>

        <TextView
            android:id="@+id/permiso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:paddingLeft="30dp"
            android:paddingRight="10dp"
            android:textSize="17sp"/>


        <TextView
            android:id="@+id/dificultad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:paddingLeft="30dp"
            android:paddingRight="10dp"
            android:textSize="17sp"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/botones"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/botonreportar"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight=".5"
            android:text="@string/reportar"
            android:background="@drawable/pulsacionbotonbuscar"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:padding="10dp"
            android:drawablePadding="0dp"
            android:gravity="center"/>

        <Button
            android:id="@+id/botonvisualizar"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight=".5"
            android:text="@string/visualizar"
            android:background="@drawable/pulsacionbotonbuscar"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:padding="10dp"
            android:gravity="center"/>

    </LinearLayout>

</LinearLayout>